@pszals @leok80: Allow configuration of NewRelic using environment variables on Nimbus 2
    - set monitoring to on or off depending on the agent_enabled switch in their app
      manifest file. This option is required to set monitoring to the offline mode
      for the stage environment by default because of the costs involved
    - default agent_enabled to false

--- a/resources/new_relic_agent/newrelic.yml
+++ b/resources/new_relic_agent/newrelic.yml
@@ -19,7 +19,7 @@ common: &default_settings
   # Agent Enabled
   # Use this setting to force the agent to run or not run.
   # Default is true.
-  # agent_enabled: true
+  agent_enabled: ''
 
   # Set to true to enable support for auto app naming.
   # The name of each web app is detected automatically
