--- a/config/java_opts.yml
+++ b/config/java_opts.yml
@@ -16,4 +16,4 @@
 # JAVA_OPTS configuration
 ---
 from_environment: false
-java_opts: -Djdk.tls.client.protocols="TLSv1,TLSv1.1,TLSv1.2" -Dhttps.protocols="TLSv1,TLSv1.1,TLSv1.2"
+java_opts: 
