--- a/config/your_kit_profiler.yml
+++ b/config/your_kit_profiler.yml
@@ -17,7 +17,7 @@
 ---
 version: 2016.+
 repository_root: "{default.repository.root}/your-kit/{platform}/{architecture}"
-enabled: false
+enabled: true
 port: 10001
 default_session_name: $(ruby -e "require 'json' ; a = JSON.parse(ENV['VCAP_APPLICATION']);
   puts \"#{a['application_name']}:#{a['instance_index']}\"")
